Refactor SlideDeck to use Kotlin collections for improved readability and performance